--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Asteroids-deluxe-polycode by LanceJZ</title>
+    <title>Panther Games - Asteroids Deluxe</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/github-light.css">
@@ -16,43 +16,40 @@
     <div class="wrapper">
       <header>
         <h1>Asteroids-deluxe-polycode</h1>
-        <p>Asteroids Deluxe using Polycode</p>
+        <p>Asteroids Deluxe in C++ 11 using Polycode</p>
 
         <p class="view"><a href="https://github.com/LanceJZ/Asteroids-Deluxe-Polycode">View the Project on GitHub <small>LanceJZ/Asteroids-Deluxe-Polycode</small></a></p>
-
+        <p class="view"><a href="http://lancejz.github.io/">Back to main page<small>Panther Games</small></a></p>        
 
         <ul>
           <li><a href="https://github.com/LanceJZ/Asteroids-Deluxe-Polycode/zipball/master">Download <strong>ZIP File</strong></a></li>
           <li><a href="https://github.com/LanceJZ/Asteroids-Deluxe-Polycode/tarball/master">Download <strong>TAR Ball</strong></a></li>
           <li><a href="https://github.com/LanceJZ/Asteroids-Deluxe-Polycode">View On <strong>GitHub</strong></a></li>
         </ul>
+        <ul>
+          <li><a href="https://github.com/LanceJZ/Asteroids-Deluxe-Polycode/blob/master/Asteroids%20Deluxe%20Release%20B0.10.rar">Download <strong>RAR File</strong></a></li>
+          <li><a href="https://www.microsoft.com/en-us/download/details.aspx?id=48145">Download <strong>VS2015RT</strong></a></li>          
+        </ul>
       </header>
-      <section>
-        <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+        
+        <section>
+<h3><a id="welcom-to-my-page" class="anchor" href="#welcome-to-my-page" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to my GitHub Page for Asteroids Deluxe.</h3>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
+<p>This is my remake of Asteroids Deluxe I made using C++ 11 with Polycode. I will share every single video game I create in the future as well. You can download the compiled for Windows game from here. <a href="https://github.com/LanceJZ/Asteroids-Deluxe-Polycode/blob/master/Asteroids%20Deluxe%20Release%20B0.10.rar">Release Game binaries B0.10</a>. You will likely need the <a href="https://www.microsoft.com/en-us/download/details.aspx?id=48145">Visual Studio 2015 C++ runtime</a> for Windows to run the game. Most people will need the runtime from Microsoft so please install the runtime before you run the game unless you know you already have it. Most game publishers are still using VC++ 2010 so it is unlikely you would have it installed already. The reason I used the 2015 version is because it has full support for C++ 11 and I love the IDE. In 2015 they added the best feature ever. When you make a new function header, you can have it make a blank in the CPP file for you!
+The game plays on Windows XP, 7, 8 and 10. It is free and open source. The game does not have an installer and it needs write access because it saves your high scores, so the best place to extract the game to is your documents, desktop or some other unrestricted folder. This is so it can make the high score file in the same folder, otherwise it will crash if it can not write to the folder. Just run AsteroidsDeluxe.exe from the folder you put it in after the runtime is installed. I hope you enjoy it as much as I did making it! Thank you.</p>
 
-<h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Designer Templates</h3>
+<h3><a id="making-of" class="anchor" href="#making-of" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>The making of Asteroids Deluxe</h3>
 
-<p>We’ve crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved.</p>
+<p>I used the same font that I created in my first vector based Asteroids game, a vector based font using nothing but lines for this game that I will use in other vector type games I create as well. I just needed to change it to use Polycode, in that each line is an object made of vertix lines. The game took me about twenty hours to make, and about another hundred cleaning, debugging and tweaking. Even though I used the same code from the Asteroids Polycode game I made, adding something that used AI and broke up when hit took some time. I used all the rock and player code from a previous version, though the UFO was changed because it had different behavior. If I make a future version it will have different colors for the lines that the user can chose. I'll also make it so you can trade your high scores with your friends if I get interest in it. I enjoyed learning more C++ 11 and learning Polycode. It really helped to make a game so easy to make. Now I'm onto my next game Vector Omega Race. I've gotten pretty far with that game, but I'll be changing it to use Polycode as well. I will add it soon, and place the link on my Main page[link].</p>
 
-<h3>
-<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Creating pages manually</h3>
+<h3><a id="screenshots" class="anchor" href="#screenshots" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Game Screenshots</h3>
 
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
-
-<h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Authors and Contributors</h3>
-
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor’s GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
-
-<h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
-      </section>
+<p><img src="images/Polycode Asteroids Deluxe Alpha 0.01 Game Over screen.png" width="501" height="470" alt="Game Over screen." longdesc="Game Over screen with instructions for gameplay."></p>
+<p><img src="images/Polycode%20Asteroids%20Deluxe%20Alpha%200.04%20functional.png" width="501" height="470" alt="Enemy Pod." longdesc="Game play with enemy pod visable."></p>
+<p><img src="images/Polycode%20Asteroids%20Deluxe%20Alpha%200.02%20Enemy%20pairs.png" width="501" height="470" alt="Enemy ship pairs." longdesc="Game play with enemy ship pairs visable"></p>
+<p><img src="images/Polycode%20Asteroids%20Deluxe%20Beta%200.10%20Full%20Game.png" width="501" height="470" alt="Game play." longdesc="Game play in finished game."></p>
+        </section>
+        
       <footer>
         <p>This project is maintained by <a href="https://github.com/LanceJZ">LanceJZ</a></p>
         <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
